[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "chumpy"
authors = [
    {name = "Matthew Loper", email = "matt.loper@gmail.com"},
]
description = "chumpy"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    'Development Status :: 4 - Beta',

    # Indicate who your project is intended for
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Mathematics',

    # Pick your license as you wish (should match "license" above)
    'License :: OSI Approved :: MIT License',

    # Specify the Python versions you support here. In particular, ensure
    # that you indicate whether you support Python 2, Python 3 or both.
    'Programming Language :: Python :: 2',
    'Programming Language :: Python :: 2.7',
    'Programming Language :: Python :: 3',

    'Operating System :: MacOS :: MacOS X',
    'Operating System :: POSIX :: Linux',
]
dependencies = [
    "numpy>=1.8.1",
    "scipy>=0.13.0",
    "six>=1.11.0",
]
dynamic = ["version"]